index.html file added

--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         </div>
         </div>
     </div>
-    
+    <div class="comfort">
+        <div class="mode">
+            <h2>Access Verified<br>World-Class Talents</h2>
+            <p id="one">Get the right match of skills for your team from our<br>
+            pool of tested talents, which are verified by renowed<br>experts.</p>
+        </div>
+      </div>
 </body>
 </html>
