index.html file added

--- a/index.html
+++ b/index.html
@@ -41,6 +41,39 @@
             <p id="one">Get the right match of skills for your team from our<br>
             pool of tested talents, which are verified by renowed<br>experts.</p>
         </div>
-      </div>
+
+        <div class="comfort2">
+            <div class="omo">
+        <div class="left">
+            <img src="/img/vector-desktop-computer-icon.webp" width="40" height="60">
+        </div>
+        <div class="right"><h4>Developers</h4></div>
+        
+        <p class="yoo">Experinced Software Developers,<br>
+            Software Arcitects and Engineering<br>
+             Managers with expertise across<br>
+            several modern technologies.</p>
+    </div>
+       
+    <div class="gik">
+    <div class="left">
+        <img src="/img/images.png" width="40" height="60">
+    </div>
+    <div class="right"><h4>Product Managers</h4></div>
+    <p id="yes">Digital Product Managers, Scrum<br>
+    Product Owners with expertise in<br> numerous industries like banking,<br>
+healthcare, ecommerce, and more.</p>
+</div>
+  
+<div class="cum">
+<div class="left">
+    <img src="/img/images (1).png" width="40" height="60">
+</div>
+<div class="right"><h4>Designers</h4></div>
+<p class="yet">Exceptional UX, UI, Visual Interaction<br>
+and Graphic Designers as well as<br> animators and talent from other<br>
+visual design areas.</p>
+</div>
+  </div>
 </body>
 </html>
