index.html file added

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
         <div class="comfort2">
             <div class="omo">
         <div class="left">
-            <img src="/img/vector-desktop-computer-icon.webp" width="40" height="60">
+            <img src="/img/vector-desktop-computer-icon.webp" width="55" height="60">
         </div>
-        <div class="right"><h4>Developers</h4></div>
+        <div class="sax"><h4>Developers</h4></div>
         
         <p class="yoo">Experinced Software Developers,<br>
             Software Arcitects and Engineering<br>
@@ -57,9 +57,9 @@
        
     <div class="gik">
     <div class="left">
-        <img src="/img/images.png" width="40" height="60">
+        <img src="/img/images.png" width="25" height="50">
     </div>
-    <div class="right"><h4>Product Managers</h4></div>
+    <div class="rig"><h4>Product Managers</h4></div>
     <p id="yes">Digital Product Managers, Scrum<br>
     Product Owners with expertise in<br> numerous industries like banking,<br>
 healthcare, ecommerce, and more.</p>
@@ -69,8 +69,8 @@ healthcare, ecommerce, and more.</p>
 <div class="left">
     <img src="/img/images (1).png" width="40" height="60">
 </div>
-<div class="right"><h4>Designers</h4></div>
-<p class="yet">Exceptional UX, UI, Visual Interaction<br>
+<div class="tag"><h4>Designers</h4></div>
+<p class="yet">Exceptional UX, UI, Visual Interaction,<br>
 and Graphic Designers as well as<br> animators and talent from other<br>
 visual design areas.</p>
 </div>
