--- a/index.html
+++ b/index.html
@@ -75,5 +75,9 @@ and Graphic Designers as well as<br> animators and talent from other<br>
 visual design areas.</p>
 </div>
   </div>
+
+  <div class="main">
+    
+  </div>
 </body>
 </html>
