all files added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Expectoo</title>
     <link rel="stylesheet" href="css/Expectoo.css">
 </head>
 <body>
@@ -76,8 +76,28 @@ visual design areas.</p>
 </div>
   </div>
 
-  <div class="main">
-    
   </div>
+
+  <div class="main">
+    <div class="left">
+        <h4 class="ex">Expectoo</h4>
+        </div>
+         <div class="ri">
+            <img src="/img/location.jpg" width="40" height="30">
+            <p id="peter">
+                No 5, Engr. Maxwell Adoki Street,<br>
+                Off Peter Odili Road, Port Harcourt,<br>
+                Rivers State<br>
+                Nigeria.<br>
+                RC No. 18715521
+            </p>
+    </div>
+    <div class="side">
+    <img src="/img/images.email.jpg" width="40" height="30">
+    <p id="email">
+        support@expectoo.net
+    </p>
+    </div>
+    </div>
 </body>
 </html>
