all added files

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@ visual design areas.</p>
   </div>
 
   </div>
-
+   
   <div class="main">
+    <div class="cont1">
     <div class="left">
         <h4 class="ex">Expectoo</h4>
         </div>
@@ -98,6 +99,39 @@ visual design areas.</p>
         support@expectoo.net
     </p>
     </div>
+    </div>
+    <div class="clien">
+      <h4 id="Clients">For Clients</h4>
+      <p id="joff">
+        Hire Professionals<br>
+        Why clients choose Us
+      </p>
+      </div>
+      <div class="team">
+      <h4 id="tog">For Professionals</h4>
+      <p id="joint">
+        Join as a Professional<br>
+        Why Professionals Choose Us
+      </p>
+      </div>
+      </div>
+       <div class="cont3">
+        <h4 id="tat">Our Talents</h4>
+        <li><a href="#">Designers</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">Project Managers</a></li>
+        <li><a href="#">SAP Specialists</a></li>
+        <li><a href="#">Cloud/ DevOps Engineers</a></li>
+        </div>
+
+        <div class="cont4">
+            <h4 id="com">Company</h4>
+            <li><a href="#">About Us</a></li>
+            <li><a href="#">F.A.Q</a></li>
+            <li><a href="#">Contact Us</a></li>
+
+        </div>
+
     </div>
 </body>
 </html>
