--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ visual design areas.</p>
       </p>
       </div>
       </div>
+
+      <div class="main2">
        <div class="cont3">
         <h4 id="tat">Our Talents</h4>
         <li><a href="#">Designers</a></li>
