all added files

--- a/index.html
+++ b/index.html
@@ -135,5 +135,10 @@ visual design areas.</p>
         </div>
 
     </div>
+    <div class="footer">
+         <p id="fit">
+            All rights reserved
+         </p>
+    </div>
 </body>
 </html>
